test/negative/114_underscore_as_label.fx
// expect: variant label
val x = match 1 { | 1 10 | _ 0 }
println(x)
