test/negative/114_underscore_as_label.err
114_underscore_as_label.fx:2:28: error: '_' cannot be used as a variant label
 2 | val x = match 1 { | 1 10 | _ 0 }
   |                            ^
